layout changes main and sidebar

--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -1,9 +1,24 @@
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">
-        <img alt="Brand" src="...">
-      </a>
+  <div class="container">
+    <div class="wrapper flexgrid flexgrid--banner">
+      
+      <aside class="banner-left">
+        <a class="" href="#">
+          <img alt="Brand" src="...">
+        </a>
+      </aside>
+
+      <aside class="banner-right">
+        <a class="" href="#">
+          <img alt="Brand" src="...">
+        </a>
+      </aside>
+
+      <section class="banner">
+        <input class="input__ask" type="text" name="search" placeholder="Search for a discussion">
+      </section>
+
+      
     </div>
   </div>
 </nav>
