--- a/src/app/modules/sidebar/sidebar.component.html
+++ b/src/app/modules/sidebar/sidebar.component.html
@@ -1,3 +1,30 @@
-<p>
-  sidebar works!
-</p>
+<div class="row">
+  <div class="col-sm-12">
+    <div class="card sidebar__card">
+      <div class="card-block">
+        <h3 class="card-title sidebar__title">Most helpful this week</h3>
+
+        <div class="card-text sidebar__user_single">
+            <div class="sidebar__complaint_name">Michael Agbabiaka</div>
+            <div class="sidebar__complaint_title">Student, Yaba Tech.</div>
+        </div>
+
+        <div class="card-text sidebar__user_single">
+            <div class="sidebar__complaint_name">Michael Agbabiaka</div>
+            <div class="sidebar__complaint_title">Student, Yaba Tech.</div>
+        </div>
+
+        <div class="card-text sidebar__user_single">
+            <div class="sidebar__complaint_name">Michael Agbabiaka</div>
+            <div class="sidebar__complaint_title">Student, Yaba Tech.</div>
+        </div>
+
+        <div class="card-text sidebar__user_single">
+            <div class="sidebar__complaint_name">Michael Agbabiaka</div>
+            <div class="sidebar__complaint_title">Student, Yaba Tech.</div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
