--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,1 +1,34 @@
 <app-header></app-header>
+
+<div class="mini-banner">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <h2>Welcome to My Voice NG</h2>
+                <h5>Ask the Product Hunt community for their recommendations on the best products.</h5>
+            </div>
+
+            <div class="col-md-4"><button class="btn_recommend">Ask for recommendation</button> </div>
+        </div>
+    </div>
+</div>
+
+<div class="container main__site">
+
+    <div class="row row-offcanvas row-offcanvas-right">
+         <div class="col-md-8">
+            <section>
+                <app-complaints></app-complaints>
+            </section>
+        </div>
+
+        <div class="col-md-4 sidebar-offcanvas">
+            <aside class="">
+                <app-sidebar></app-sidebar>
+            </aside>
+        </div>
+    </div>
+       
+    
+</div>
+
