new voice and login component plus modifications in other components

--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -3,8 +3,8 @@
     <div class="wrapper flexgrid flexgrid--banner">
       
       <aside class="banner-left">
-        <a class="" href="#">
-          <img alt="Brand" src="...">
+        <a class="" routerLink="/">
+          <img alt="Brand" src="assets/images/myvoiceng.png" class="site__logo">
         </a>
       </aside>
 
@@ -15,7 +15,7 @@
       </aside>
 
       <section class="banner">
-        <input class="input__ask" type="text" name="search" placeholder="Search for a discussion">
+        <input class="input__search" type="text" name="search" placeholder="Search for a discussion">
       </section>
 
       
