--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -8,7 +8,7 @@
                 <h5>Ask the Product Hunt community for their recommendations on the best products.</h5>
             </div>
 
-            <div class="col-md-4"><button class="btn_recommend">Ask for recommendation</button> </div>
+            <div class="col-md-4"><a class="btn btn-default btn_recommend" role="button" routerLink="voice">Voice your complaint</a> </div>
         </div>
     </div>
 </div>
