login and header changes

--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -10,7 +10,7 @@
 
       <aside class="banner-right">
         <a class="" href="#">
-          <img alt="Brand" src="...">
+          <img alt="Branding" src="">
         </a>
       </aside>
 
