--- a/src/app/modules/sidebar/sidebar.component.html
+++ b/src/app/modules/sidebar/sidebar.component.html
@@ -2,27 +2,33 @@
   <div class="col-sm-12">
     <div class="card sidebar__card">
       <div class="card-block">
-        <h3 class="card-title sidebar__title">Most helpful this week</h3>
+        <h3 class="card-title sidebar__title">Most  this week</h3>
 
-        <div class="card-text sidebar__user_single">
-            <div class="sidebar__complaint_name">Michael Agbabiaka</div>
-            <div class="sidebar__complaint_title">Student, Yaba Tech.</div>
-        </div>
+          <div class="card-text sidebar__user_single">
+            <div class="sidebar__user_thumbnail">
+                <h5>hi</h5>
+            </div>
+            <div class="sidebar__user_details">
+              <div class="sidebar__complaint_name">Michael Agbabiaka</div>
+              <div class="sidebar__complaint_title">Student, Yaba Tech.</div>
+            </div>
+          </div>
+          
 
-        <div class="card-text sidebar__user_single">
-            <div class="sidebar__complaint_name">Michael Agbabiaka</div>
-            <div class="sidebar__complaint_title">Student, Yaba Tech.</div>
-        </div>
+          <div class="card-text sidebar__user_single">
+              <div class="sidebar__complaint_name">Michael Agbabiaka</div>
+              <div class="sidebar__complaint_title">Student, Yaba Tech.</div>
+          </div>
 
-        <div class="card-text sidebar__user_single">
-            <div class="sidebar__complaint_name">Michael Agbabiaka</div>
-            <div class="sidebar__complaint_title">Student, Yaba Tech.</div>
-        </div>
+          <div class="card-text sidebar__user_single">
+              <div class="sidebar__complaint_name">Michael Agbabiaka</div>
+              <div class="sidebar__complaint_title">Student, Yaba Tech.</div>
+          </div>
 
-        <div class="card-text sidebar__user_single">
-            <div class="sidebar__complaint_name">Michael Agbabiaka</div>
-            <div class="sidebar__complaint_title">Student, Yaba Tech.</div>
-        </div>
+          <div class="card-text sidebar__user_single">
+              <div class="sidebar__complaint_name">Michael Agbabiaka</div>
+              <div class="sidebar__complaint_title">Student, Yaba Tech.</div>
+          </div>
 
       </div>
     </div>
