--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,1 +1,47 @@
 <app-header></app-header>
+
+<div class="container">
+
+   <div class="card login__page">
+    <div class="row">
+    
+        <div class="col-md-6 voice__card">
+          <div class="col-md-6 col-md-offset-3 login__social-login-btn">
+            <button type="submit" class="btn btn-primary btn-block login__social-login-btn">Login with Facebook</button>
+          </div>
+
+          <div class="col-md-6 col-md-offset-3 login__social-login-btn">
+            <button type="submit" class="btn btn-primary btn-block login__social-login-btn">Login with Twitter</button>
+          </div>
+        </div>
+
+        <div class="col-md-6 login__userform">
+          <div class="voice__card">
+            <div class="card-block">
+                <form class="form-horizontal voice__form">
+                  <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-3 control-label">Email</label>
+                    <div class="col-sm-9">
+                      <input type="text" class="form-control" id="inputEmail3" placeholder="Email address">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-3 control-label">Password</label>
+                    <div class="col-sm-9">
+                      <input type="password" class="form-control" id="inputEmail3" placeholder="Password">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="col-sm-offset-3 col-sm-9">
+                      <button type="submit" class="btn btn-primary btn-block">LOGIN</button>
+                    </div>
+                  </div>
+                </form>
+            </div>
+          </div>
+        </div>
+    </div>
+  </div> <!-- end card -->
+
+
+</div>
