added color schemes and side profile icons

--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -10,13 +10,13 @@
 
       <aside class="banner-right">
         <a class="" href="#">
-          <img alt="Branding" src="">
+          <img src="http://placehold.it/30x30" class="img-circle" alt="">
         </a>
       </aside>
 
-      <section class="banner">
+      <!--<section class="banner">
         <input class="input__search" type="text" name="search" placeholder="Search for a discussion">
-      </section>
+      </section>-->
 
       
     </div>
