--- a/src/app/views/voice/voice.component.html
+++ b/src/app/views/voice/voice.component.html
@@ -40,7 +40,7 @@
               </div>
               <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                  <button type="submit" class="btn btn-default">CONTINUE</button>
+                  <button type="submit" class="btn btn-default">SUBMIT</button>
                 </div>
               </div>
             </form>
