work on login colayout

--- a/src/app/views/voice/voice.component.html
+++ b/src/app/views/voice/voice.component.html
@@ -6,7 +6,7 @@
         <div class="card-block">
             <div class="row voice__title">
               <div class="col-md-4">ask myvoice</div>
-              <div class="col-md-4 col-md-offset-4" style="text-align: right">voice your complaint</div>
+              <div class="col-md-4 col-md-offset-4 voice__ask-text" style="text-align: right">voice your complaint</div>
             </div>
         </div>
       </div>
