--- a/src/app/modules/sidebar/sidebar.component.html
+++ b/src/app/modules/sidebar/sidebar.component.html
@@ -45,6 +45,37 @@
             </div>
           </div>
 
+          <div class="card-text sidebar__user_single">
+            <div class="sidebar__user_thumbnail">
+                <img src="http://placehold.it/40x40" class="img-circle" alt="">
+            </div>
+            <div class="sidebar__user_details">
+              <div class="sidebar__complaint_name">Michael Agbabiaka</div>
+              <div class="sidebar__complaint_title">Student, Yaba Tech.</div>
+            </div>
+          </div>
+
+          <div class="card-text sidebar__user_single">
+            <div class="sidebar__user_thumbnail">
+                <img src="http://placehold.it/40x40" class="img-circle" alt="">
+            </div>
+            <div class="sidebar__user_details">
+              <div class="sidebar__complaint_name">Michael Agbabiaka</div>
+              <div class="sidebar__complaint_title">Student, Yaba Tech.</div>
+            </div>
+          </div>
+
+          <div class="card-text sidebar__user_single">
+            <div class="sidebar__user_thumbnail">
+                <img src="http://placehold.it/40x40" class="img-circle" alt="">
+            </div>
+            <div class="sidebar__user_details">
+              <div class="sidebar__complaint_name">Michael Agbabiaka</div>
+              <div class="sidebar__complaint_title">Student, Yaba Tech.</div>
+            </div>
+          </div>
+
+
       </div>
     </div>
   </div>
