--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -3,15 +3,15 @@
 <div class="container">
 
    <div class="card login__page">
-    <div class="row">
+    <div class="">
     
-        <div class="col-md-6 voice__card">
-          <div class="col-md-6 col-md-offset-3 login__social-login-btn">
-            <button type="submit" class="btn btn-primary btn-block login__social-login-btn">Login with Facebook</button>
+        <div class="col-md-6 login__socialsection">
+          <div class="col-md-6 col-md-offset-3 login__social-holder">
+            <button type="buton" class="btn btn-primary btn-block login__social-login-btn">Login with Facebook</button>
           </div>
 
-          <div class="col-md-6 col-md-offset-3 login__social-login-btn">
-            <button type="submit" class="btn btn-primary btn-block login__social-login-btn">Login with Twitter</button>
+          <div class="col-md-6 col-md-offset-3 login__social-holder">
+            <button type="button" class="btn btn-primary btn-block login__social-login-btn">Login with Twitter</button>
           </div>
         </div>
 
@@ -22,7 +22,13 @@
                   <div class="form-group">
                     <label for="inputEmail3" class="col-sm-3 control-label">Email</label>
                     <div class="col-sm-9">
-                      <input type="text" class="form-control" id="inputEmail3" placeholder="Email address">
+                      <input type="email" class="form-control" id="inputEmail3" placeholder="Email address">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-3 control-label">Username</label>
+                    <div class="col-sm-9">
+                      <input type="text" class="form-control" id="inputEmail3" placeholder="Username">
                     </div>
                   </div>
                   <div class="form-group">
