new feeds and profile components, modified login page

--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,18 +1,47 @@
-<app-header></app-header>
+<nav class="navbar navbar-default">
+  <div class="container">
+    <div class="wrapper login__flexgrid flexgrid--banner">
+
+      <section class="banner">
+         <a class="" routerLink="/">
+          <img alt="Brand" src="assets/images/myvoiceng.png" class="site__logo">
+        </a>
+      </section>
+
+      
+    </div>
+  </div>
+</nav>
+
+
+
+<div class="login__mini-banner">
+    <div class="container">
+        <div class="row login__minibanner__content">
+            <div class="col-md-6 login__minibanner__title">
+                <p>MyVoice is a community for Active Citizens to share and resolve complaints that cut across Power, Health and other Social Issues.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <div class="container">
 
    <div class="card login__page">
-    <div class="">
+    <div class="row">
     
         <div class="col-md-6 login__socialsection">
           <div class="col-md-6 col-md-offset-3 login__social-holder">
-            <button type="buton" class="btn btn-primary btn-block login__social-login-btn">Login with Facebook</button>
-          </div>
+            <button type="buton" class="btn btn-primary btn-block login__social-login-btn" style="margin-bottom: 25px;">Login with Facebook</button>
 
-          <div class="col-md-6 col-md-offset-3 login__social-holder">
             <button type="button" class="btn btn-primary btn-block login__social-login-btn">Login with Twitter</button>
           </div>
+
+          <!--<div class="col-md-6 col-md-offset-3 login__social-holder">
+            
+          </div>-->
+          
         </div>
 
         <div class="col-md-6 login__userform">
@@ -23,12 +52,6 @@
                     <label for="inputEmail3" class="col-sm-3 control-label">Email</label>
                     <div class="col-sm-9">
                       <input type="email" class="form-control" id="inputEmail3" placeholder="Email address">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-3 control-label">Username</label>
-                    <div class="col-sm-9">
-                      <input type="text" class="form-control" id="inputEmail3" placeholder="Username">
                     </div>
                   </div>
                   <div class="form-group">
@@ -46,6 +69,7 @@
             </div>
           </div>
         </div>
+
     </div>
   </div> <!-- end card -->
 
