--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -258,7 +258,8 @@
 /*** LOGIN LAYOUT ***/
 
 .login__page {
-    margin-top: 25px;
+    margin-top: 15px;
+    padding-bottom: 25px;
     vertical-align: middle;
 }
 
@@ -274,15 +275,65 @@
 
 .login__social-holder {
     max-width: 50%;
+    display: block;
+    margin-top: 20px;
 }
 
 
 .login__userform {
-    border-left: 1px solid rgb(255, 109, 0);
+    border-left: 1px dotted rgba(255, 109, 0, 0.75);
 }
 
 .login__social-login-btn {
     margin: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
+}
+
+.login__input {
+    padding: 10px;
+}
+
+.login__mini-banner {
+    padding: 10px;
+    background-color: rgb(255,109, 0);
+    box-sizing: border-box;
+    color: #fff;
+    margin-bottom: 20px;
+}
+
+.login__minibanner__content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+}
+
+.login__minibanner__title p {
+    font-size: 20px;
+    line-height: 28px;
+    font-weight: normal;
+    text-align: center;
+}
+
+.login__flexgrid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  align-items: center;
+  position: relative;
+  height: 100%;
+}
+
+
+/*** PROFILE LAYOUT ***/
+
+.profile__sidebar-title {
+    font-size: 15px;
+    text-transform: uppercase;
+    border-bottom: 1px solid rgba(117, 122, 150, 0.27);
+    padding-bottom: 10px;
+    margin-bottom: 20px;
 }
