--- a/src/app/views/profile/profile.component.html
+++ b/src/app/views/profile/profile.component.html
@@ -1,17 +1,29 @@
 
 <app-header></app-header>
 
-<div class="mini-banner">
-    <div class="container">
+<div class="profile__mini-banner">
+    <div class="container profile">
         <div class="row minibanner__content">
             <div class="col-md-8 minibanner__title">
                 <!--<img src="http://placehold.it/70x70" class="img-circle" style="float: left" alt="">-->
-                <h2>Obadina Komeh</h2>
+                <!--<h2>Obadina Komeh</h2>
                 <h5>@sidiuskomeh</h5>
-                <h5>Project Manager</h5>
+                <h5>Project Manager</h5>-->
+
+                <div class="card-text sidebar__user_single">
+                  <div class="sidebar__user_thumbnail">
+                      <img src="http://placehold.it/120x120" class="img-circle" alt="">
+                  </div>
+                  <div class="sidebar__user_details">
+                    <div class="profile__banner_name">Obadina Komeh</div>
+                    <div class="profile__banner_title">@oba_k</div>
+                    <div class="profile__banner_title">Project Manager</div>
+                  </div>
+                </div>
+
             </div>
 
-            <div class="col-md-4 minibanner__ask-button"><a class="btn btn-default btn_recommend" role="button" routerLink="voice">Edit</a> </div>
+            <div class="col-md-4 minibanner__ask-button"><a class="btn btn-default btn_recommend" role="button" routerLink="edit">Edit</a> </div>
         </div>
     </div>
 </div>
