rant component and module editing

--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -9,7 +9,7 @@
       </aside>
 
       <aside class="banner-right">
-        <a class="" href="#">
+        <a class="" href="/profile">
           <img src="http://placehold.it/30x30" class="img-circle" alt="">
         </a>
       </aside>
