--- a/src/app/views/voice/voice.component.html
+++ b/src/app/views/voice/voice.component.html
@@ -16,28 +16,33 @@
   <div class="row">
       <div class="card voice__card">
         <div class="card-block">
-            <form class="form-horizontal voice__form">
+            <div class="alert alert-success" *ngIf="result.success">Your Complaint Has Been Successfully Submitted</div>
+            <form class="form-horizontal voice__form" (submit)="postComplaint()">
               <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">Complaint</label>
+                <label for="inputEmail3" class="col-sm-2 control-label">Complaint Title</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control input_title" id="inputEmail3" placeholder="Give a title to your complaint. E.g We do not have a transformer in Mushin.">
+                  <input type="text" class="form-control input_title" id="inputEmail3" name="title" [(ngModel)]="voice.title" placeholder="Give a title to your complaint. E.g We do not have a transformer in Mushin.">
                   <p class="help-block">Required</p>
                 </div>
               </div>
               <div class="form-group">
                 <label for="inputPassword3" class="col-sm-2 control-label">Description</label>
                 <div class="col-sm-10">
-                  <textarea class="form-control" rows="3" placeholder="Explain briefly the nature of your complaint. E.g I live in Kojola street in Mushin..."></textarea>
+                  <textarea class="form-control" rows="3" name="body" [(ngModel)]="voice.body" placeholder="Explain briefly the nature of your complaint. E.g I live in Kojola street in Mushin..."></textarea>
                   <p class="help-block">Required</p>
                 </div>
               </div>
               <div class="form-group">
                 <label for="inputEmail3" class="col-sm-2 control-label">Evidence</label>
                 <div class="col-sm-10">
-                  <input type="file" id="inputEmail3" placeholder="Attach evidence">
+                  <input type="file" id="inputEmail3" name="evidence" [(ngModel)]="voice.evidence" placeholder="Attach evidence">
                   <p class="help-block">Optional</p>
                 </div>
               </div>
+              
+              <!-- Hidden Category field -->
+              <input type="hidden" class="form-control input_title" id="inputEmail3" name="categoryId" [(ngModel)]="voice.categoryId">
+              
               <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                   <button type="submit" class="btn btn-default">SUBMIT</button>
