--- a/src/app/modules/complaints/complaints.component.html
+++ b/src/app/modules/complaints/complaints.component.html
@@ -1,10 +1,10 @@
+<div class="alert alert-danger" *ngIf="errors" >An error has occured: {{ errors.status }} - {{errors._body}} </div>
 <div  *ngFor="let complaint of complaints" class="row single-complaint">
   <div class="col-sm-12">
     <div class="card">
       <div class="card-block">
         <app-rant [complaint]="complaint"></app-rant>
         <!--{{ complaint | json}} -->
-        <!--hello-->
       </div>
     </div>
   </div>
