--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -33,40 +33,18 @@
     
         <div class="col-md-6 login__userform">
           <div class="voice__card">
-            <div class="card-block">
-              <h3 class="card-title profile__sidebar-title">Register</h3>
-                <form class="form-horizontal voice__form" (submit)="registerUser()" >
-                  <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-4 control-label">Full Name</label>
-                    <div class="col-sm-8">
-                      <input type="email" class="form-control" id="inputEmail3" [(ngModel)]="user.fullname" name="fullname" placeholder="Full Name">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-4 control-label">Phone Number</label>
-                    <div class="col-sm-8">
-                      <input type="email" class="form-control" id="inputEmail3" [(ngModel)]="user.phone" name="phone" placeholder="Phone Number">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-4 control-label">Email</label>
-                    <div class="col-sm-8">
-                      <input type="email" class="form-control" id="inputEmail3" [(ngModel)]="user.email" name="email" placeholder="Email address">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-4 control-label">Password</label>
-                    <div class="col-sm-8">
-                      <input type="password" class="form-control" id="inputEmail3" [(ngModel)]="user.password" name="password" placeholder="Password">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-sm-offset-4 col-sm-8">
-                      <button type="submit" class="btn btn-primary btn-block">Register</button>
+            <div class="card-block col-md-8 col-md-offset-2">
 
-                    </div>
-                  </div>
-                </form>
+                    <button type="buton" class="btn btn-primary btn-block login__facebook-login-btn" style="margin-bottom: 20px">
+                      <i class="fa fa-facebook" aria-hidden="true"></i> 
+                      Login with Facebook
+                    </button>
+
+                    <button type="button" class="btn btn-block login__twitter-login-btn" (click)="loginWithTwitter()">
+                      <i class="fa fa-twitter" aria-hidden="true"></i>
+                      Login with Twitter
+                    </button> 
+
             </div>
           </div>
         </div>
@@ -74,7 +52,6 @@
         <div class="col-md-6 login__userform">
           <div class="voice__card">
             <div class="card-block">
-              <h3 class="card-title profile__sidebar-title">Login Here</h3>
                 <form class="form-horizontal voice__form">
                   <div class="form-group">
                     <label for="inputEmail3" class="col-sm-3 control-label">Email</label>
@@ -91,11 +68,6 @@
                   <div class="form-group">
                     <div class="col-sm-offset-3 col-sm-9">
                       <button type="submit" class="btn btn-primary btn-block" style="margin-bottom: 25px;">LOGIN</button>
-
-                      <hr/>
-                      <button type="buton" class="btn btn-primary btn-block login__facebook-login-btn"><i class="fa fa-facebook" aria-hidden="true"></i> Login with Facebook</button>
-
-                      <button type="button" class="btn btn-block login__twitter-login-btn"><i class="fa fa-twitter" aria-hidden="true"></i> Login with Twitter</button> 
                     </div>
                   </div>
                 </form>
