Success notification correction

--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -11,7 +11,7 @@
 
       <aside class="banner-right" *ngIf="authService.isAuthenticated()">
         <a class="" href="/profile">
-          <img src="http://placehold.it/30x30" class="img-circle" alt="">
+          <img src="https://placehold.it/30x30" class="img-circle" alt="">
         </a>
         <a (click)="authService.logout()">Logout</a>
       </aside>
