--- a/src/app/views/voice/voice.component.html
+++ b/src/app/views/voice/voice.component.html
@@ -16,7 +16,7 @@
   <div class="row">
       <div class="card voice__card">
         <div class="card-block">
-            <div class="alert alert-success" *ngIf="result.success">Your Complaint Has Been Successfully Submitted</div>
+            <div class="alert alert-success" *ngIf="result"> Your Complaint Has Been Successfully Submitted</div>
             <form class="form-horizontal voice__form" (submit)="postComplaint()">
               <div class="form-group">
                 <label for="inputEmail3" class="col-sm-2 control-label">Complaint Title</label>
