--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -13,12 +13,14 @@
     </div>
 </div>
 
+<div class="main__body">
+
 <div class="container main__site">
 
     <div class="row row-offcanvas row-offcanvas-right">
          <div class="col-md-8">
             <section>
-                <app-complaints></app-complaints>
+                <app-complaints>Loading complaints...</app-complaints>
             </section>
         </div>
 
@@ -28,7 +30,7 @@
             </aside>
         </div>
     </div>
-       
-    
+ 
 </div>
 
+</div>
