--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -15,61 +15,46 @@
 
 
 
-<div class="login__mini-banner">
-    <div class="container">
-        <div class="row login__minibanner__content">
-            <div class="col-md-6 login__minibanner__title">
-                <p>MyVoice is a community for Active Citizens to share and resolve complaints that cut across Power, Health and other Social Issues.</p>
-            </div>
-        </div>
-    </div>
-</div>
-
 
 <div class="container">
 
-   <div class="card login__page">
+   <div class="login__page">
     <div class="row">
-    
-        <div class="col-md-6 login__userform">
-          <div class="voice__card">
-            <div class="card-block col-md-8 col-md-offset-2">
 
-                    <button type="buton" class="btn btn-primary btn-block login__facebook-login-btn" style="margin-bottom: 20px">
-                      <i class="fa fa-facebook" aria-hidden="true"></i> 
-                      Login with Facebook
-                    </button>
-
-                    <button type="button" class="btn btn-block login__twitter-login-btn" (click)="loginWithTwitter()">
-                      <i class="fa fa-twitter" aria-hidden="true"></i>
-                      Login with Twitter
-                    </button> 
-
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-6 login__userform">
+        <div class="card col-md-4 col-md-offset-4 login__userform">
           <div class="voice__card">
             <div class="card-block">
-                <form class="form-horizontal voice__form">
+                <form class="voice__form">
                   <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-3 control-label">Email</label>
-                    <div class="col-sm-9">
-                      <input type="email" class="form-control" id="inputEmail3" placeholder="Email address">
-                    </div>
+                    <label for="exampleInputEmail1">Email address</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
                   </div>
                   <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-3 control-label">Password</label>
-                    <div class="col-sm-9">
-                      <input type="password" class="form-control" id="inputEmail3" placeholder="Password">
-                    </div>
+                    <label for="exampleInputPassword1">Password</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                   </div>
+
+                   <div class="form-group">
+                      <button type="buton" class="btn btn-primary btn-block" style="margin-bottom: 20px">
+                        Login with Email
+                      </button>
+                   </div>
+                  
+
+
                   <div class="form-group">
-                    <div class="col-sm-offset-3 col-sm-9">
-                      <button type="submit" class="btn btn-primary btn-block" style="margin-bottom: 25px;">LOGIN</button>
-                    </div>
+                      <button type="buton" class="btn btn-primary btn-block login__facebook-login-btn">
+                        <i class="fa fa-facebook" aria-hidden="true"></i> 
+                        Login with Facebook
+                      </button>
+
+                      <button type="button" class="btn btn-block login__twitter-login-btn" (click)="loginWithTwitter()">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                        Login with Twitter
+                      </button>
                   </div>
+
+                  
                 </form>
             </div>
           </div>
