--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,4 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~font-awesome/css/font-awesome.css";
+@import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono');
+
