--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato|Roboto|Roboto+Mono');
 
 body {
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Lato', monospace;
 }
 
 
@@ -29,7 +29,7 @@ body {
 .main__body {
     background-color: #fafafa;
     padding-top: 20px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
 
 }
 
@@ -274,7 +274,7 @@ body {
 
 .voice__card {
     padding: 20px;
-    margin: 20px 0;
+    /*margin: 20px 0;*/
 }
 
 /*.voice__form input, textarea {
