--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -42,7 +42,7 @@
                     
 
                     <div class="form-group">
-                        <button type="buton" class="btn btn-primary btn-block login__facebook-login-btn">
+                        <button type="buton" class="btn btn-primary btn-block login__facebook-login-btn" (click)="loginWithFacebook()">
                           <i class="fa fa-facebook" aria-hidden="true"></i> 
                           Login with Facebook
                         </button>
