--- a/src/app/views/voice/voice.component.html
+++ b/src/app/views/voice/voice.component.html
@@ -16,7 +16,7 @@
   <div class="row">
       <div class="card voice__card">
         <div class="card-block">
-            <div class="alert alert-success" *ngIf="result"> Your Complaint Has Been Successfully Submitted</div>
+            <div class="alert alert-success" *ngIf="result?.length > 0"> Your Complaint Has Been Successfully Submitted</div>
             <form class="form-horizontal voice__form" (submit)="postComplaint()">
               <div class="form-group">
                 <label for="inputEmail3" class="col-sm-2 control-label">Complaint Title</label>
@@ -45,7 +45,7 @@
               
               <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                  <button type="submit" class="btn btn-default">SUBMIT</button>
+                  <button type="submit" class="btn btn-default" >SUBMIT</button>
                 </div>
               </div>
             </form>
