minor edits and profile layout

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -18,9 +18,9 @@
 <div class="container main__site">
 
     <div class="row row-offcanvas row-offcanvas-right">
-         <div class="col-md-8">
+         <div class="col-md-8 col-xs-12">
             <section>
-                <app-complaints>Loading complaints...</app-complaints>
+                <app-complaints><p>Loading complaints...</p></app-complaints>
             </section>
         </div>
 
