--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -4,7 +4,7 @@
 
       <section class="banner">
          <a class="" routerLink="/">
-          <img alt="Brand" src="assets/images/myvoiceng.png" class="site__logo">
+          <img alt="MyVoiceNG" src="assets/images/myvoiceng.png" class="site__logo">
         </a>
       </section>
 
