--- a/src/app/views/profile/profile.component.html
+++ b/src/app/views/profile/profile.component.html
@@ -4,18 +4,14 @@
     <div class="container profile">
         <div class="row minibanner__content">
             <div class="col-md-9 minibanner__title">
-                <!--<img src="http://placehold.it/70x70" class="img-circle" style="float: left" alt="">-->
-                <!--<h2>Obadina Komeh</h2>
-                <h5>@sidiuskomeh</h5>
-                <h5>Project Manager</h5>-->
 
                 <div class="card-text sidebar__user_single">
                   <div class="sidebar__user_thumbnail">
-                      <img src="{{ authService.currentUser.photoURL }}" width="120px" height="120px" class="img-circle" alt="">
+                      <img src="{{ authService.currentUser?.photoURL }}" width="120px" height="120px" class="img-circle" alt="">
                   </div> 
                   <div class="sidebar__user_details">
-                    <div class="profile__banner_name"> {{ authService.currentUser.displayName }}</div>
-                    <div class="profile__banner_title">{{ authService.currentUser.email }}</div>
+                    <div class="profile__banner_name"> {{ authService.currentUser?.displayName }}</div>
+                    <div class="profile__banner_title">{{ authService.currentUser?.email }}</div>
                     <!-- <div class="profile__banner_title">Project Manager</div> -->
                   </div>
                 </div>
