--- a/src/app/views/voice/voice.component.html
+++ b/src/app/views/voice/voice.component.html
@@ -5,8 +5,7 @@
       <div class="card voice__card">
         <div class="card-block">
             <div class="row voice__title">
-              <div class="col-md-4">ask myvoice</div>
-              <div class="col-md-4 col-md-offset-4 voice__ask-text" style="text-align: right">voice your complaint</div>
+              <div class="col-md-4 col-md-offset-4">let your voice be heard</div>
             </div>
         </div>
       </div>
@@ -34,7 +33,7 @@
               </div>
               <div class="form-group">
                 <label for="inputEmail3" class="col-sm-2 control-label">Evidence</label>
-                <div class="col-sm-10">
+                <div class="col-sm-8">
                   <input type="file" id="inputEmail3" name="evidence" [(ngModel)]="voice.evidence" placeholder="Attach evidence">
                   <p class="help-block">Optional</p>
                 </div>
@@ -42,7 +41,10 @@
               
               <!-- Hidden Category field -->
               <input type="hidden" class="form-control input_title" id="inputEmail3" name="categoryId" [(ngModel)]="voice.categoryId">
-              
+              <div class="col-sm-8 col-sm-offset-2"> 
+                <div class="alert alert-danger" *ngIf="loggedInStr === true">You need to login to post your complaint. <a routerLink="/login">Login Here</a></div>
+              </div>
+
               <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                   <button type="submit" class="btn btn-default" >SUBMIT</button>
